[gd_scene load_steps=14 format=4 uid="uid://bsdakb76wd1x2"]

[ext_resource type="Script" uid="uid://16wdiw1oo131" path="res://scripts/starting_menu.gd" id="1_cxv6e"]
[ext_resource type="Texture2D" uid="uid://bheejfcror6km" path="res://sprites/sprites/sprites/paka's petting sim/ground.png" id="2_uynpn"]
[ext_resource type="FontFile" uid="uid://cpj4vdfgcbvqi" path="res://sprites/sprites/sprites/BUTTONS/Minecraft.ttf" id="3_3td01"]
[ext_resource type="Texture2D" uid="uid://ry0lo5s18lyl" path="res://sprites/sprites/sprites/BUTTONS/StartButton2.png" id="4_tu32s"]
[ext_resource type="Texture2D" uid="uid://cv4606ykr2oer" path="res://sprites/sprites/sprites/BUTTONS/StartButton1.png" id="5_aetgi"]
[ext_resource type="Texture2D" uid="uid://cqicxjqwgu4eb" path="res://sprites/sprites/sprites/BUTTONS/Exit1.png" id="6_4fe80"]
[ext_resource type="Texture2D" uid="uid://doprxsf5wc0p7" path="res://sprites/sprites/sprites/BUTTONS/Exit2.png" id="7_omm7k"]
[ext_resource type="PackedScene" uid="uid://brcr4x2kc12c7" path="res://scenes/snow.tscn" id="8_7v0ru"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_hoeeq"]
texture = ExtResource("2_uynpn")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0

[sub_resource type="TileSet" id="TileSet_4g2ns"]
sources/0 = SubResource("TileSetAtlasSource_hoeeq")

[sub_resource type="Animation" id="Animation_3td01"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(5, 5)]
}

[sub_resource type="Animation" id="Animation_uynpn"]
resource_name = "zoom_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.99),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(5, 5), Vector2(3, 3), Vector2(0.1, 0.1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tu32s"]
_data = {
&"RESET": SubResource("Animation_3td01"),
&"zoom_out": SubResource("Animation_uynpn")
}

[node name="starting_menu" type="Node2D"]
script = ExtResource("1_cxv6e")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD4//v/AAAEAAAAAAD4//z/AAAEAAAAAAD4//3/AAAEAAAAAAD4//7/AAAEAAAAAAD4////AAAEAAAAAAD4/wAAAAAEAAAAAAD4/wEAAAAEAAAAAAD4/wIAAAAEAAAAAAD4/wMAAAAFAAAAAAD4/wQAAAAFAAEAAAD5//v/AAAEAAAAAAD5//z/AAAEAAAAAAD5//3/AAAEAAAAAAD5//7/AAAEAAAAAAD5////AAAEAAAAAAD5/wAAAAAEAAAAAAD5/wEAAAAEAAAAAAD5/wIAAAAEAAAAAAD5/wMAAAAFAAAAAAD5/wQAAAAFAAEAAAD6//v/AAAEAAAAAAD6//z/AAAEAAAAAAD6//3/AAAEAAAAAAD6//7/AAAEAAAAAAD6////AAAEAAAAAAD6/wAAAAAEAAAAAAD6/wEAAAAEAAAAAAD6/wIAAAAEAAAAAAD6/wMAAAAFAAAAAAD6/wQAAAAFAAEAAAD7//v/AAAEAAAAAAD7//z/AAAEAAAAAAD7//3/AAAEAAAAAAD7//7/AAAEAAAAAAD7////AAAEAAAAAAD7/wAAAAAEAAAAAAD7/wEAAAAEAAAAAAD7/wIAAAAEAAAAAAD7/wMAAAAFAAAAAAD7/wQAAAAFAAEAAAD8//v/AAAEAAAAAAD8//z/AAAEAAAAAAD8//3/AAAEAAAAAAD8//7/AAAEAAAAAAD8////AAAEAAAAAAD8/wAAAAAEAAAAAAD8/wEAAAAEAAAAAAD8/wIAAAAEAAAAAAD8/wMAAAAFAAAAAAD8/wQAAAAFAAEAAAD9//v/AAAEAAAAAAD9//z/AAAEAAAAAAD9//3/AAAEAAAAAAD9//7/AAAEAAAAAAD9////AAAEAAAAAAD9/wAAAAAEAAAAAAD9/wEAAAAEAAAAAAD9/wIAAAAEAAAAAAD9/wMAAAAFAAAAAAD9/wQAAAAFAAEAAAD+//v/AAAEAAAAAAD+//z/AAAEAAAAAAD+//3/AAAEAAAAAAD+//7/AAAEAAAAAAD+////AAAEAAAAAAD+/wAAAAAEAAAAAAD+/wEAAAAEAAAAAAD+/wIAAAAEAAAAAAD+/wMAAAAFAAAAAAD+/wQAAAAFAAEAAAD///v/AAAEAAAAAAD///z/AAAEAAAAAAD///3/AAAEAAAAAAD///7/AAAEAAAAAAD/////AAAEAAAAAAD//wAAAAAEAAAAAAD//wEAAAAEAAAAAAD//wIAAAAEAAAAAAD//wMAAAAFAAAAAAD//wQAAAAFAAEAAAAAAPv/AAAEAAAAAAAAAPz/AAAEAAAAAAAAAP3/AAAEAAAAAAAAAP7/AAAEAAAAAAAAAP//AAAEAAAAAAAAAAAAAAAEAAAAAAAAAAEAAAAEAAAAAAAAAAIAAAAEAAAAAAAAAAMAAAAFAAAAAAAAAAQAAAAFAAEAAAABAPv/AAAEAAAAAAABAPz/AAAEAAAAAAABAP3/AAAEAAAAAAABAP7/AAAEAAAAAAABAP//AAAEAAAAAAABAAAAAAAEAAAAAAABAAEAAAAEAAAAAAABAAIAAAAEAAAAAAABAAMAAAAFAAAAAAABAAQAAAAFAAEAAAACAPv/AAAEAAAAAAACAPz/AAAEAAAAAAACAP3/AAAEAAAAAAACAP7/AAAEAAAAAAACAP//AAAEAAAAAAACAAAAAAAEAAAAAAACAAEAAAAEAAAAAAACAAIAAAAEAAAAAAACAAMAAAAFAAAAAAACAAQAAAAFAAEAAAADAPv/AAAEAAAAAAADAPz/AAAEAAAAAAADAP3/AAAEAAAAAAADAP7/AAAEAAAAAAADAP//AAAEAAAAAAADAAAAAAAEAAAAAAADAAEAAAAEAAAAAAADAAIAAAAEAAAAAAADAAMAAAAFAAAAAAADAAQAAAAFAAEAAAAEAPv/AAAEAAAAAAAEAPz/AAAEAAAAAAAEAP3/AAAEAAAAAAAEAP7/AAAEAAAAAAAEAP//AAAEAAAAAAAEAAAAAAAEAAAAAAAEAAEAAAAEAAAAAAAEAAIAAAAEAAAAAAAEAAMAAAAFAAAAAAAEAAQAAAAFAAEAAAAFAPv/AAAEAAAAAAAFAPz/AAAEAAAAAAAFAP3/AAAEAAAAAAAFAP7/AAAEAAAAAAAFAP//AAAEAAAAAAAFAAAAAAAEAAAAAAAFAAEAAAAEAAAAAAAFAAIAAAAEAAAAAAAFAAMAAAAFAAAAAAAFAAQAAAAFAAEAAAAGAPv/AAAEAAAAAAAGAPz/AAAEAAAAAAAGAP3/AAAEAAAAAAAGAP7/AAAEAAAAAAAGAP//AAAEAAAAAAAGAAAAAAAEAAAAAAAGAAEAAAAEAAAAAAAGAAIAAAAEAAAAAAAGAAMAAAAFAAAAAAAGAAQAAAAFAAEAAAAHAPv/AAAEAAAAAAAHAPz/AAAEAAAAAAAHAP3/AAAEAAAAAAAHAP7/AAAEAAAAAAAHAP//AAAEAAAAAAAHAAAAAAAEAAAAAAAHAAEAAAAEAAAAAAAHAAIAAAAEAAAAAAAHAAMAAAAFAAAAAAAHAAQAAAAFAAEAAAA=")
tile_set = SubResource("TileSet_4g2ns")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(5, 5)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera2D"]
libraries = {
&"": SubResource("AnimationLibrary_tu32s")
}

[node name="text_and_buttons" type="Node2D" parent="."]

[node name="Label" type="Label" parent="text_and_buttons"]
offset_left = -62.0
offset_top = -37.0
offset_right = 62.0
offset_bottom = -14.0
theme_override_fonts/font = ExtResource("3_3td01")
text = "Panda's Domain"

[node name="Label2" type="Label" parent="text_and_buttons"]
offset_left = -62.0
offset_top = -36.0
offset_right = 62.0
offset_bottom = -13.0
theme_override_colors/font_color = Color(0.13333334, 0.1254902, 0.20392157, 1)
theme_override_fonts/font = ExtResource("3_3td01")
text = "Panda's Domain"

[node name="StartGame" type="TextureButton" parent="text_and_buttons"]
offset_left = -71.0
offset_right = -7.0
offset_bottom = 16.0
texture_normal = ExtResource("4_tu32s")
texture_hover = ExtResource("5_aetgi")

[node name="Exit" type="TextureButton" parent="text_and_buttons"]
offset_right = 64.0
offset_bottom = 16.0
texture_normal = ExtResource("6_4fe80")
texture_hover = ExtResource("7_omm7k")

[node name="snow" parent="." instance=ExtResource("8_7v0ru")]

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="text_and_buttons/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="text_and_buttons/Exit" to="." method="_on_exit_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
